@@ -17,6 +17,8 @@
 #ifndef _PORT_TUN_H
 #define _PORT_TUN_H
 
+struct Channel;
+
 #if defined(SSH_TUN_LINUX) || defined(SSH_TUN_FREEBSD)
 # define CUSTOM_SYS_TUN_OPEN
 int	  sys_tun_open(int, int);
